fixed bug 59460 -- unable to display international message; r=sspitzer, scottip333; sr=mscott